[project]
name = "reentbotpro"
version = "0.1.0"
description = "LLM-powered smart contract audit agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Sachin Buluswar"}]
keywords = [
    "smart-contracts",
    "security",
    "audit",
    "solidity",
    "ethereum",
    "llm",
    "foundry",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "docker>=7.0.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "ddgs>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]

[project.scripts]
reentbotpro = "reentbotpro.cli:main"

[project.urls]
Homepage = "https://github.com/Sachin-Buluswar/ReentbotPro"
Repository = "https://github.com/Sachin-Buluswar/ReentbotPro"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
